--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="Fruit basket" content="Your online fruit delivery service">
         <link rel="stylesheet" href="./fruit-basket.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
-        <script src="./fruit-basket.js" async></script>
     </head>
     <body>
         <header class="main-header">
@@ -16,10 +15,10 @@
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
             </nav>
-            <h1 class="band-name band-name-large">The Generics</h1>
+            <h1 class="band-name band-name-large">Fruit Basket</h1>
         </header>
         <section class="container content-section">
-            <h2 class="section-header">MUSIC</h2>
+            <h2 class="section-header">Fruit</h2>
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Apples</span>
@@ -86,5 +85,6 @@
                 </ul>
             </div>
         </footer>
+        <script src="./fruit-basket.js" async></script>
     </body>
 </html>
