--- a/index.html
+++ b/index.html
@@ -8,32 +8,28 @@
     </head>
     <body>
         <header class="main-header">
-            <nav class="main-nav nav">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="store.html">STORE</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                </ul>
-            </nav>
-            <h1 class="band-name band-name-large">Fruit Basket</h1>
+            <div  class="display-middle" style="white-space:nowrap;">
+                <h1 class="header-text">FRUIT BASKET</h1>
+            </div>
         </header>
+
         <section class="container content-section">
-            <h2 class="section-header">Fruit</h2>
+            <h2 class="section-header">ON OFFER</h2>
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Apples</span>
                     <img class="shop-item-image" src="./images/apples.jpeg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">£0.50</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                        <button class="button btn-primary shop-item-button" type="button">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Bananas</span>
                     <img class="shop-item-image" src="./images/bananas.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">£0.25/span>
-                        <button class="btn btn-primary shop-item-button"type="button">ADD TO CART</button>
+                        <span class="shop-item-price">£0.25</span>
+                        <button class="button btn-primary shop-item-button"type="button">ADD TO CART</button>
                     </div>
                 </div>
                 <div class="shop-item">
@@ -41,9 +37,16 @@
                     <img class="shop-item-image" src="./images/kiwis.jpeg">
                     <div class="shop-item-details">
                         <span class="shop-item-price">£0.75</span>
-                        <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
+                        <button class="button btn-primary shop-item-button" type="button">ADD TO CART</button>
                     </div>
                 </div>
+                <div class="shop-item">
+                    <span class="shop-item-title">Oranges</span>
+                    <img class="shop-item-image" src="./images/oranges.jpg">
+                    <div class="shop-item-details">
+                        <span class="shop-item-price">£0.80</span>
+                        <button class="button btn-primary shop-item-button" type="button">ADD TO CART</button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -59,32 +62,11 @@
             </div>
             <div class="cart-total">
                 <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">$0</span>
+                <span class="cart-total-price">£0</span>
             </div>
-            <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+            <button class="button btn-primary btn-purchase" type="button">PURCHASE</button>
         </section>
-        <footer class="main-footer">
-            <div class="container main-footer-container">
-                <h3 class="band-name">Fruit Basket</h3>
-                <ul class="nav footer-nav">
-                    <li>
-                        <a href="https://www.youtube.com" target="_blank">
-                            <img src="Images/YouTube Logo.png">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.spotify.com" target="_blank">
-                            <img src="Images/Spotify Logo.png">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com" target="_blank">
-                            <img src="Images/Facebook Logo.png">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </footer>
+
         <script src="./fruit-basket.js" async></script>
     </body>
 </html>
