--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <strong class="cart-total-title">Total</strong>
                 <span class="cart-total-price">£0</span>
             </div>
-            <button class="button btn-primary btn-purchase" type="button">PURCHASE</button>
+            <button class="button btn-primary purchase-button" type="button">PURCHASE</button>
         </section>
 
         <script src="./fruit-basket.js" async></script>
